--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -87,3 +87,26 @@
 #modal form button:hover {
     background-color: #2fb85e;
 }
+
+/* Isto é para o modal point created*/
+#modal.point .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.point h1 {
+    color: white;
+    margin-top: 32px;
+}
+ 
+#modal.error .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.error h1 {
+    color: white;
+    margin-top: 32px;
+}
